--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
 
 .popup-dialog-wrapper {
   border: rgba(13, 13, 13, 0.3) 5px solid;
+  padding-bottom: 12px;
 }
 
 .title-wrapper {
@@ -36,4 +37,23 @@ body {
 
 .youtube-thumbnail-getter-thumbnail-img {
   width: 100%;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 12px;
+}
+
+.button {
+  background-color: #EFEEF4;
+  border: none;
+  border-radius: 8px;
+  padding: 12px;
+  font-weight: bold;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #dddddd;
+  }
 }
